tests/miniJava/neg/000359_mutation.MiniJava
class java { public static void Main ( String false ] java ) { { } } }
